# ddos-mitigation-via-machine-learning

./: .gitignore  pyproject.toml
ddos_mitigation_via_machine_learning/: data_preprocessing.py  evaluate_dataset.py  evaluate_predictions.py  model_trainer.py  predict_attacks.py
ddos_mitigation_via_machine_learning/trained-models/: ddos_recognition_model.h5  ddos_recognition_model_v2.h5  ddos_recognition_model_v3.h5
ddos_mitigation_via_machine_learning/v1/: model_trainer.py  predict_attacks.py
ddos_mitigation_via_machine_learning/v2/: model_trainer_v2.py  predict_attacks_v2.py
ddos_mitigation_via_machine_learning/v3/: model_trainer_v3.py  predict_attacks_v3.py
