[project]
name = "ddos-mitigation-via-machine-learning"
version = "0.1.0"
description = "A machine learning project for detecting DDoS attacks in network traffic."
authors = [
    {name = "Simon Hajek",email = "sihajek@aol.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tensorflow (>=2.18.0,<3.0.0)",
    "argparse (>=1.4.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
